--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "chatapp-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "engines": {
+    "node": "10.x"
+  },
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "author": "",
   "license": "ISC",
